--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-image-gallery": "^1.3.0",
