--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
