--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@firebase/storage": "^0.11.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
+    "@material-tailwind/react": "^2.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,24 +20,24 @@
     "axios": "^1.5.0",
     "bignumber.js": "^9.1.2",
     "firebase": "^10.3.1",
-    "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.1.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
-    "yup": "^1.3.2"
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
