--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^5.1.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@firebase/storage": "^0.11.2",
@@ -17,9 +18,9 @@
     "axios": "^1.5.0",
     "bignumber.js": "^9.1.2",
     "firebase": "^10.3.1",
-    "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
