--- a/package.json
+++ b/package.json
@@ -10,25 +10,35 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.11",
+    "@mui/x-data-grid-generator": "^6.16.1",
+    "@paypal/react-paypal-js": "^8.1.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@restart/hooks": "^0.4.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.6",
     "axios": "^1.5.0",
     "bignumber.js": "^9.1.2",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.3.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
-    "react-image-gallery": "^1.3.0",
-    "react-router-dom": "^6.15.0",
+    "react-redux": "^8.1.3",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
@@ -58,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.3.3"
   }
 }
