--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.2",
